Se actualizaron tamaños y espacios

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <div class="col-12 col-md-2">
                                 </div>
                                 <div class="col-12 col-md-8">
-                                    <p class="pb-3 text-light fs-6">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
+                                    <p class="pb-3 text-light parrafos">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
                                 </div>
                                 <div class="col-12 col-md-2">
                                 </div>
@@ -47,7 +47,7 @@
                             <a class="btn btn-primary text-success fw-bold shadow m-2" href="#" role="button">Download for iOS</a>
                             <a class="btn btn-secondary text-success fw-bold shadow m-2" href="#" role="button">Download for Mac</a>
                         </div>
-                        <div class="alto-1"></div>
+                        <div class="alto-0"></div>
                     </div>
                 </div>
             </div>
@@ -57,18 +57,18 @@
         <div class="row">
             <div class="col-12">
                     <section class="row d-flex justify-content-center">
-                        <div class="col-12 text-center mb-4">
+                        <div class="col-12 text-center">
                             <h3 class="pb-2 fw-bold">Keep track of your snippets</h3>
                             <div class="row">
                                 <div class="col-sm-12 col-md-1 col-lg-3">
                                 </div>
                                 <div class="col-sm-12 col-md-10 col-lg-6  px-xs-5">
-                                    <p class="pb-3 text-light fs-6 ">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+                                    <p class="pb-3 text-light parrafos ">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
                                 </div>
                                 <div class="col-sm-12 col-md-1 col-lg-3">
                                 </div>
                             </div>
-                            
+                            <div class="alto-3"></div>
                         </div>
                         <div class="row d-flex align-items-center">
                             <div class="col-sm-12 col-md-6 text-center">
@@ -76,16 +76,16 @@
                             </div>
                             <div class="col-sm-12 col-md-5 col-lg-4 p-md-5 pt-5 pt-md-0">
                                 <div>
-                                    <h5 class="pb-0 fw-bold text-center text-md-start">Quick Search</h5>
-                                    <p class="pb-3 text-light fs-6 text-center text-md-start">Easily search your snippets by content, category, web address, application, and more.</p>
+                                    <h4 class="pb-0 fw-bold text-center text-md-start">Quick Search</h4>
+                                    <p class="pb-3 text-light parrafos text-center text-md-start">Easily search your snippets by content, category, web address, application, and more.</p>
                                 </div>
                                 <div>
-                                    <h5 class="pb-0 fw-bold text-center text-md-start">iCloud Sync</h5>
-                                    <p class="pb-3 text-light fs-6 text-center text-md-start">Instantly saves and syncs snippets across all your devices.</p>
+                                    <h4 class="pb-0 fw-bold text-center text-md-start">iCloud Sync</h4>
+                                    <p class="pb-3 text-light parrafos text-center text-md-start">Instantly saves and syncs snippets across all your devices.</p>
                                 </div>
                                 <div>
-                                    <h5 class="pb-0 fw-bold text-center text-md-start">Complete History</h5>
-                                    <p class="pb-3 text-light fs-6  text-center text-md-start">Retrieve any snippets from the first moment you started using the app.</p>
+                                    <h4 class="pb-0 fw-bold text-center text-md-start">Complete History</h4>
+                                    <p class="pb-3 text-light parrafos  text-center text-md-start">Retrieve any snippets from the first moment you started using the app.</p>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-1 col-lg-2"></div>
@@ -104,7 +104,7 @@
                                 <div class="col-2"></div>
                                 <div class="col-12 col-md-8">
                                     <h3 class="pb-2 fw-bold">Access Clipboard anywhere</h3>
-                                    <p class="pb-3 text-light fs-6 px-md-2">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+                                    <p class="pb-3 text-light parrafos px-md-2">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
                                     <div class="alto-4"></div>
                                 </div>
                                 <div class="col-2"></div>
@@ -134,7 +134,7 @@
                                 <div class="col-12 col-sm-4">
                                     <img src="images/icon-blacklist.svg" alt="">
                                     <h5 class="pb-2 fw-bold  pt-4">Create blacklist</h5>
-                                    <p class="pb-5 text-light fs-6 px-md-2">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+                                    <p class="pb-5 text-light parrafos px-md-2">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
                                 </div>
                                 <div class="col-12 col-sm-4">
                                     <img src="images/icon-text.svg" alt="">
@@ -157,7 +157,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <div class="alto-1"></div>
+                            <div class="alto-0"></div>
                             <div class="d-flex flex-column flex-sm-row justify-content-between">
                                 <picture class="p-5  p-sm-3 p-md-3 p-lg-1">
                                     <img src="images/logo-google.png" alt="logo-google" class="w-100">
@@ -175,7 +175,7 @@
                                     <img src="images/logo-vector-graphics.png" alt="logo-google" class="w-100">
                                 </picture>
                             </div>
-                            <div class="alto-1"></div>
+                            <div class="alto-0"></div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                                 <div class="col-12 col-md-2">
                                 </div>
                                 <div class="col-12 col-md-8">
-                                    <p class="pb-3 text-light fs-6 px-md-2">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
+                                    <p class="pb-3 text-light parrafos px-md-2">Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.</p>
                                 </div>
                                 <div class="col-12 col-md-2">
                                 </div>
@@ -202,7 +202,7 @@
                             <a class="btn btn-primary text-success fw-bold shadow m-2" href="#" role="button">Download for iOS</a>
                             <a class="btn btn-secondary text-success fw-bold shadow m-2" href="#" role="button">Download for Mac</a>
                         </div>
-                        <div class="alto-1"></div>
+                        <div class="alto-0"></div>
                     </section>
                 </div>
             </div>
